traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:18: error: not found: value writeMassage
    writeMassage(counter)
    ^